--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.3",
     "mongoose": "^5.6.4",
     "morgan": "^1.9.1",
+    "node-mailer": "^0.1.1",
     "node-schedule": "^2.1.0",
     "nodemon": "^2.0.4",
     "request-promise": "^4.2.6"
